# ai-agent-crash-course

./: .envrc.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
aihero/course/: day-01-ingest.ipynb  day-02-chunk.ipynb  day-03-search.ipynb  day-04-agent.ipynb  day-05-evaluation.ipynb  example.md
aihero/course/logs/: faq_agent_20251002_111315_0a47e6.json  faq_agent_v2_20251002_115904_1cd9e6.json  faq_agent_v2_20251002_170057_4d3520.json  faq_agent_v2_20251002_170132_d8333c.json  faq_agent_v2_20251002_170221_515204.json  faq_agent_v2_20251002_170249_7f475b.json  faq_agent_v2_20251002_170308_aa2d8d.json  faq_agent_v2_20251002_170333_8c521a.json  faq_agent_v2_20251002_170355_e51b83.json  faq_agent_v2_20251002_170415_dcb37b.json  faq_agent_v2_20251002_170436_bd0ed7.json  faq_agent_v2_20251002_170500_1eea10.json
aihero/course/utils/: chunk.py  ingest.py
code/: app.py  ingest.py  logger.py  logs.py  main.py  search_agent.py  search_tools.py
code/eval/: data-gen.ipynb  evaluation.ipynb
code/eval_logs/: gh_agent_20251003_180922_8256cd.json  gh_agent_20251003_180935_c41056.json  gh_agent_20251003_180946_ff5169.json  gh_agent_20251003_180955_8fca61.json  gh_agent_20251003_181007_c6eca0.json  gh_agent_20251003_181031_871af4.json  gh_agent_20251003_181042_1cbd46.json  gh_agent_20251003_181059_f2093e.json  gh_agent_20251003_181121_215cbf.json  gh_agent_20251003_181133_4d18d1.json
